set layout for app details

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name_categories">App Categories</string>
     <string name="app_name_app_list">%s</string>
     <string name="app_name_app_details">App Details</string>
+    <string name="app_details_view_genres">Genres</string>
 </resources>
 
